# Builder

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  WORKSPACE  api.cpp  api.h  binding.cpp  binding.h  bootstrap.mk  build.h  build_examples.c  builder  builder.c  builder.cpp  builder.h  builder2.cpp  builder_api.cpp  builder_api.h  builder_ctx.cpp  builder_ctx.h  builder_driver  builder_driver.cpp  builder_gfx.c  builder_gfx.h  builder_plugin.cpp  builder_plugin.h  builder_plugin_internal.h  cleanup_script.sh  cli.cpp  compiler.cpp  compiler.h  cpp_compiler.cpp  cpp_compiler.h  debug_orchestrator.sh  deps.json  driver.cpp  (+59 more)
apps/visualizer/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  visualizer.cpp
builder/: CMakeLists.txt  assembly.h  binary.cpp  binary.h  builder.cpp  builder.h  call.cpp  call.h  components.cpp  components.h  editor.h  file.cpp  file.h  function.cpp  function.h  function_alu.cpp  function_alu.h  function_call_repository.cpp  function_call_repository.h  function_compound.cpp  function_compound.h  function_id.cpp  function_id.h  function_ir.cpp  function_ir.h  function_ir_assembly.cpp  function_ir_assembly.h  function_ir_binary.cpp  function_ir_binary.h  function_ir_file_repository.cpp  function_ir_file_repository.h  function_primitive_cpp.cpp  function_primitive_cpp.h  function_primitive_lang.cpp  function_primitive_lang.h  function_repository.cpp  function_repository.h  libc.h  nodes.cpp  nodes.h  (+23 more)
builder/builtins/: builtins.cpp  builtins.h
builder/core/: compiler.cpp  compiler.h  component.cpp  libc.h  node.cpp  node.h  process.cpp  process.h  typesystem.cpp  typesystem.h  wire.cpp  wire.h
builder/tests/: CMakeLists.txt  basic.cpp  test_builtins.cpp  test_call.cpp  test_compiler.cpp  test_function.cpp  test_function_alu.cpp  test_function_call_repository.cpp  test_function_compound.cpp  test_function_id.cpp  test_function_ir.cpp  test_function_ir_assembly.cpp  test_function_ir_binary.cpp  test_function_ir_file_repository.cpp  test_function_primitive_cpp.cpp  test_function_primitive_lang.cpp  test_function_repository.cpp  test_node.cpp  test_nodes.cpp  test_typesystem.cpp  test_typesystem_call.cpp
builder/types/: boolean.cpp  boolean.h  float.h  int.cpp  int.h
programs/function_visualizer/: CMakeLists.txt
programs/tests/: CMakeLists.txt
programs/visualizer/: CMakeLists.txt
src/: call.cmake  call.cpp  function.cmake  function.cpp  function_alu.cmake  function_call_repository.cmake  function_call_repository.cpp  function_compound.cmake  function_compound.h  function_id.cmake  function_id.h  function_ir.cmake  function_ir.cpp  function_ir.h  function_ir_assembly.cmake  function_ir_assembly.cpp  function_ir_assembly.h  function_ir_binary.cmake  function_ir_binary.cpp  function_ir_file_repository.cmake  function_ir_file_repository.cpp  function_primitive_cpp.cmake  function_primitive_cpp.cpp  function_primitive_cpp.h  function_primitive_lang.cmake  function_primitive_lang.h  function_repository.cmake  function_repository.cpp  function_visualizer.cmake  function_visualizer.cpp  function_visualizer_editor.cmake  function_visualizer_editor.cpp  function_visualizer_editor.h  meson.build  tests_main.cmake  typesystem.cmake  typesystem.cpp  typesystem.h  typesystem_call.cmake  typesystem_call.cpp
src/call/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  call.cpp  meson.build
src/call_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  call_test.cpp  meson.build
src/compiler_gcc/: compiler.cpp  compiler.h
src/dep_one/: builder.cpp
src/dep_two/: builder.cpp
src/example_module/: builder.cpp  example.cpp
src/function/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function.cpp  function_test.cpp  meson.build
src/function_alu/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_alu.cpp  meson.build
src/function_alu_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  function_alu_test.cpp  meson.build
src/function_call_repository/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_call_repository.cpp  meson.build
src/function_call_repository_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_compound/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_compound.cpp  function_compound_test.cpp  meson.build
src/function_compound_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_id/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  function_id_test.cpp  meson.build  meson_options.txt
src/function_id_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_ir/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_ir.cpp  function_ir_test.cpp  meson.build
src/function_ir_assembly/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_ir_assembly_test.cpp  meson.build
src/function_ir_assembly_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_ir_binary/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_ir_binary_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  function_ir_binary_test.cpp  meson.build
src/function_ir_file_repository/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  build.module  build.rs  build.zig  build.zig.zon  function_ir_file_repository.cpp  function_ir_file_repository_test.cpp  meson.build
src/function_ir_file_repository_test/: BUILD  Cargo.toml  build.module  build.rs  build.zig  build.zig.zon  meson.build
src/function_ir_test/: BUILD  Cargo.toml  (+5 more)
(+572 files in other folders)
