[workspace]
resolver = "2"
members = [
    "src/call",
    "src/call_test",
    "src/function",
    "src/function_alu",
    "src/function_alu_test",
    "src/function_call_repository",
    "src/function_call_repository_test",
    "src/function_compound",
    "src/function_compound_test",
    "src/function_id",
    "src/function_id_test",
    "src/function_ir",
    "src/function_ir_assembly",
    "src/function_ir_assembly_test",
    "src/function_ir_binary",
    "src/function_ir_binary_test",
    "src/function_ir_file_repository",
    "src/function_ir_file_repository_test",
    "src/function_ir_test",
    "src/function_primitive_cpp",
    "src/function_primitive_cpp_test",
    "src/function_primitive_lang",
    "src/function_primitive_lang_test",
    "src/function_repository",
    "src/function_repository_test",
    "src/function_test",
    "src/function_visualizer",
    "src/function_visualizer_editor",
    "src/google_test",
    "src/imgui",
    "src/raylib_wrapper",
    "src/rlImGui",
    "src/typesystem",
    "src/typesystem_call",
    "src/typesystem_call_test",
    "src/typesystem_test",
    "src/ulid",
    "tools/builder_runner",
]
