# Aggregate build graph for all modules
subdir('ulid')
subdir('call')
subdir('typesystem')
subdir('function_id')
subdir('function_ir')
subdir('function')
subdir('function_alu')
subdir('function_repository')
subdir('function_primitive_cpp')
subdir('function_primitive_lang')
subdir('function_call_repository')
subdir('function_compound')
subdir('function_ir_assembly')
subdir('function_ir_binary')
subdir('function_ir_file_repository')
subdir('typesystem_call')
subdir('imgui')
subdir('rlImGui')
subdir('function_visualizer_editor')
subdir('function_visualizer')
