package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function",
    srcs = ["function.cpp"],
    hdrs = ["function.h"],
    deps = [
        "//function_ir:function_ir",
        "//typesystem:typesystem",
    ],
)

cc_test(
    name = "function_tests",
    srcs = ["function_test.cpp"],
    deps = [
        ":function",
        "@com_google_googletest//:gtest_main",
    ],
)
