package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_alu",
    srcs = ["function_alu.cpp"],
    hdrs = ["function_alu.h"],
    deps = [
        "//function:function",
        "//typesystem:typesystem",
    ],
)

cc_library(
    name = "function_alu_tests",
    srcs = ["function_alu_test.cpp"],
    hdrs = ["function_alu.h"],
    deps = [
        ":function_alu",
        "//typesystem:typesystem",
        "@com_google_googletest//:gtest",
    ],
    testonly = True,
)
