package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_alu",
    srcs = ["function_alu.cpp"],
    hdrs = ["function_alu.h"],
    deps = [
        "@function//:function",
        "@typesystem//:typesystem",
    ],
)

cc_test(
    name = "function_alu_tests",
    srcs = ["function_alu_test.cpp"],
    deps = [
        ":function_alu",
        "@com_google_googletest//:gtest_main",
    ],
)
