package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_call_repository",
    srcs = ["function_call_repository.cpp"],
    hdrs = ["function_call_repository.h"],
    deps = [
        "//function:function",
        "//function_id:function_id",
    ],
)

cc_library(
    name = "function_call_repository_tests",
    srcs = ["function_call_repository_test.cpp"],
    hdrs = ["function_call_repository.h"],
    deps = [
        ":function_call_repository",
        "//function:function",
        "//function_id:function_id",
        "@com_google_googletest//:gtest",
    ],
    testonly = True,
)
