package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_call_repository",
    srcs = ["function_call_repository.cpp"],
    hdrs = ["function_call_repository.h"],
    deps = [
        "@function//:function",
        "@function_id//:function_id",
    ],
)

cc_test(
    name = "function_call_repository_tests",
    srcs = ["function_call_repository_test.cpp"],
    deps = [
        ":function_call_repository",
        "@com_google_googletest//:gtest_main",
    ],
)
