[package]
name = "function_call_repository_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
builder_runner = { path = "../../tools/builder_runner" }
function_call_repository = { path = "../function_call_repository" }
google_test = { path = "../google_test" }

[build-dependencies]
cc = "1"
