package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_compound",
    srcs = ["function_compound.cpp"],
    hdrs = ["function_compound.h"],
    deps = [
        "//function:function",
        "//function_id:function_id",
        "//typesystem:typesystem",
    ],
)

cc_test(
    name = "function_compound_tests",
    srcs = ["function_compound_test.cpp"],
    deps = [
        ":function_compound",
        "@com_google_googletest//:gtest_main",
    ],
)
