module(name = "function_compound", version = "0.0.0")

bazel_dep(name = "function", version = "0.0.0")
bazel_dep(name = "function_id", version = "0.0.0")
bazel_dep(name = "typesystem", version = "0.0.0")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest", dev_dependency = True)
