package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_id",
    srcs = ["function_id.cpp"],
    hdrs = ["function_id.h"],
)

cc_library(
    name = "function_id_tests",
    srcs = ["function_id_test.cpp"],
    hdrs = ["function_id.h"],
    deps = [
        ":function_id",
        "@com_google_googletest//:gtest",
    ],
    testonly = True,
)
