package(default_visibility = ["//visibility:public"])

cc_library(
    name = "function_ir",
    srcs = ["function_ir.cpp"],
    hdrs = ["function_ir.h"],
    deps = [
        "@function_id//:function_id",
    ],
)

cc_test(
    name = "function_ir_tests",
    srcs = ["function_ir_test.cpp"],
    deps = [
        ":function_ir",
        "@com_google_googletest//:gtest_main",
    ],
)
